--- a/cadrastro.html
+++ b/cadrastro.html
@@ -1,61 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Crie sua conta na Ande firme com qualidade e aproveite todos os benefícios." />
-  <title>Cadastro - Ande firme com qualidade</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cadastro - Ande Firme</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Cabeçalho -->
-  <header class="site-header">
-    <div class="header-container">
-      <div class="logo">
-        <h1>Ande firme com qualidade</h1>
-        <p class="tagline">Tênis</p>
-      </div>
-      <nav class="main-nav">
-        <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="produtos.html">Todos os produtos</a></li>
-          <li><a href="login.html">Entrar</a></li>
-        </ul>
-      </nav>
+
+<header class="site-header">
+  <div class="header-container">
+    <div class="logo">
+      <h1>Ande firme com qualidade</h1>
     </div>
-  </header>
+  </div>
+</header>
 
-  <!-- Seção de Cadastro -->
-  <main>
-    <section id="cadastro-section" class="auth-section" aria-labelledby="cadastro-heading">
-      <h2 id="cadastro-heading">Criar Conta</h2>
-      <form id="cadastroForm">
-        <div class="form-group">
-          <label for="name">Nome</label>
-          <input type="text" id="name" name="name" required />
-        </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" required />
-        </div>
-        <div class="form-group">
-          <label for="password">Senha</label>
-          <input type="password" id="password" name="password" required />
-        </div>
-        <button type="submit" class="btn-primary">Cadastrar</button>
-      </form>
-
-      <div class="switch-auth">
-        <p>Já tem conta?</p>
-        <button onclick="window.location.href='login.html'" class="link-btn">Entrar</button>
+<main>
+  <section id="register-section" class="auth-section">
+    <h2>Cadastro</h2>
+    <form id="registerForm">
+      <div class="form-group">
+        <label for="registerName">Nome</label>
+        <input type="text" id="registerName" name="name" required>
       </div>
-    </section>
-  </main>
+      <div class="form-group">
+        <label for="registerEmail">Email</label>
+        <input type="email" id="registerEmail" name="email" required>
+      </div>
+      <div class="form-group">
+        <label for="registerPassword">Senha</label>
+        <input type="password" id="registerPassword" name="password" required>
+      </div>
+      <button class="btn-primary" type="submit">Cadastrar</button>
+    </form>
 
-  <footer class="site-footer">
-    <p>&copy; 2025 Ande firme com qualidade</p>
-  </footer>
+    <div class="switch-auth">
+      <p>Já tem conta?</p>
+      <button onclick="window.location.href='login.html'" class="link-btn">Entrar</button>
+    </div>
+  </section>
+</main>
 
-  <script src="script.js"></script>
+<footer class="site-footer">
+  <p>&copy; 2025 Ande firme com qualidade</p>
+</footer>
+
+<!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore.js"></script>
+
+<!-- Script Cadastro modular -->
+<script type="module" src="cadastro.js"></script>
+
 </body>
 </html>
