--- a/cadrastro.html
+++ b/cadrastro.html
@@ -47,12 +47,10 @@
 </footer>
 
 <!-- Firebase SDKs -->
-<script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore.js"></script>
+
 
 <!-- Script Cadastro modular -->
-<script type="module" src="cadastro.js"></script>
+<script type="module" src="./cadastro.js"></script>
 
 </body>
 </html>
