--- a/dashboard.html
+++ b/dashboard.html
@@ -31,12 +31,10 @@
 </footer>
 
 <!-- Firebase SDKs -->
-<script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore.js"></script>
+
 
 <!-- Script Dashboard modular -->
-<script type="module" src="dashboard.js"></script>
+<script type="module" src="./dashboard.js"></script>
 
 </body>
 </html>
