--- a/login.html
+++ b/login.html
@@ -43,12 +43,10 @@
 </footer>
 
 <!-- Firebase SDKs -->
-<script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore.js"></script>
+
 
 <!-- Script Login modular -->
-<script type="module" src="login.js"></script>
+<script type="module" src="./login.js"></script>
 
 </body>
 </html>
