--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />w
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Ande firme com qualidade - Sua loja de tênis online. Encontre os melhores tênis com os melhores preços." />
   <title>Ande firme com qualidade - Loja de Tênis</title>
   
