--- a/dashboard.html
+++ b/dashboard.html
@@ -34,7 +34,7 @@
 
 
 <!-- Script Dashboard modular -->
-<script type="module" src="./index.html"></script>
+<script type="module" src="./dashboard.js"></script>
 
 </body>
 </html>
