--- a/admin.html
+++ b/admin.html
@@ -3,100 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Painel Admin</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Painel Admin - Ande Firme</title>
+  <link rel="stylesheet" href="admin.css">
 </head>
 <body>
-  <!-- Header igual ao do index -->
-  <header class="site-header">
-    <div class="header-container">
-      <div class="logo">
-        <h1>Ande firme com qualidade</h1>
-        <p class="tagline">tênis</p>
-      </div>
-      <nav class="main-nav">
-        <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="produtos.html">Todos os produtos</a></li>
-        </ul>
-      </nav>
-      <div class="header-actions">
-        <button id="goToShopBtn">Ir para Loja</button>
-        <button id="adminLogoutBtn">Sair</button>
-      </div>
+
+<header class="site-header">
+  <div class="header-container">
+    <div class="logo">
+      <h1>Administração - Ande Firme</h1>
     </div>
-  </header>
+    <div class="header-actions">
+      <button id="btnBack" class="btn-secondary">Voltar à Loja</button>
+      <button id="btnLogout" class="btn-secondary">Sair</button>
+    </div>
+  </div>
+</header>
 
-  <main>
-    <!-- PAINEL ADMIN -->
-    <section id="admin-section" aria-labelledby="admin-heading">
-      <h2 id="admin-heading">Painel Administrativo</h2>
-
-      <!-- Histórico de Compras -->
-      <div class="admin-subsection">
-        <h3>Histórico de Compras</h3>
-        <div class="table-container">
-          <table id="historyTable">
-            <thead>
-              <tr>
-                <th scope="col">Usuário</th>
-                <th scope="col">Itens</th>
-                <th scope="col">Total</th>
-                <th scope="col">Data</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
+<main>
+  <section id="add-product-section" class="dashboard-card">
+    <h2>Adicionar Produto</h2>
+    <form id="add-product-form">
+      <div class="form-group">
+        <label for="productName">Nome do Produto</label>
+        <input type="text" id="productName" required>
       </div>
-
-      <!-- Informações de Usuário -->
-      <div class="admin-subsection">
-        <h3>Informações de Usuário</h3>
-        <div class="table-container">
-          <table id="userTable">
-            <thead>
-              <tr>
-                <th scope="col">Nome</th>
-                <th scope="col">Email</th>
-                <th scope="col">Status</th>
-                <th scope="col">Ações</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
+      <div class="form-group">
+        <label for="productPrice">Preço</label>
+        <input type="number" step="0.01" id="productPrice" required>
       </div>
-
-      <!-- Estoque de Produtos -->
-      <div class="admin-subsection">
-        <h3>Estoque de Produtos</h3>
-        <div class="table-container">
-          <table id="stockTable">
-            <thead>
-              <tr>
-                <th scope="col">Produto</th>
-                <th scope="col">Imagem</th>
-                <th scope="col">34</th>
-                <th scope="col">35</th>
-                <th scope="col">36</th>
-                <th scope="col">37</th>
-                <th scope="col">38</th>
-                <th scope="col">39</th>
-                <th scope="col">Ação</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
+      <div class="form-group">
+        <label for="productImage">URL da Imagem</label>
+        <input type="text" id="productImage" required>
       </div>
-    </section>
-  </main>
+      <div class="form-group">
+        <label for="productSizes">Tamanhos (separados por vírgula)</label>
+        <input type="text" id="productSizes" placeholder="Ex: 38,39,40,41" required>
+      </div>
+      <button type="submit" class="btn-primary">Adicionar Produto</button>
+    </form>
+  </section>
 
-  <footer class="site-footer">
-    <p>&copy; 2025 Ande firme com qualidade</p>
-  </footer>
+  <section id="product-list-section" class="dashboard-card">
+    <h2>Produtos Cadastrados</h2>
+    <div id="product-list"></div>
+  </section>
+</main>
 
-  <script src="admin.js"></script>
+<footer class="site-footer">
+  <p>&copy; 2025 Ande firme com qualidade</p>
+</footer>
+
+<script type="module" src="admin.js"></script>
+
 </body>
 </html>
