--- a/admin.html
+++ b/admin.html
@@ -8,17 +8,29 @@
 </head>
 <body>
 
-<header class="site-header">
-  <div class="header-container">
-    <div class="logo">
-      <h1>Administração - Ande Firme</h1>
+ <header class="site-header">
+    <div class="header-container">
+      <div class="logo">
+        <a href="index.html">
+          <img src="T.png" alt="Logo Ande Firme" class="logo-img">
+        </a>
+        <div class="logo-text">
+          <h1>Ande firme com qualidade</h1>
+          <p class="tagline">Tênis</p>
+        </div>
+      </div>
+
+      <nav class="main-nav">
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="produtos.html">Produtos</a></li>
+          <li><a href="sobre.html">Sobre nós</a></li>
+          <li><a href="login.html">Cadastro</a></li>
+          <li><a href="compra.html" class="active">🛒</a></li>
+        </ul>
+      </nav>
     </div>
-    <div class="header-actions">
-      <button id="btnBack" class="btn-secondary">Voltar à Loja</button>
-      <button id="btnLogout" class="btn-secondary">Sair</button>
-    </div>
-  </div>
-</header>
+  </header>
 
 <main>
   <section id="add-product-section" class="dashboard-card">
