--- a/admin.html
+++ b/admin.html
@@ -48,6 +48,14 @@
         <label for="productImage">URL da Imagem</label>
         <input type="text" id="productImage" required>
       </div>
+     <div class="form-group">
+  <label for="productWidth">Largura da Imagem (px)</label>
+  <input type="number" id="productWidth" placeholder="Ex: 200">
+</div>
+<div class="form-group">
+  <label for="productHeight">Altura da Imagem (px)</label>
+  <input type="number" id="productHeight" placeholder="Ex: 200">
+</div>
       <div class="form-group">
         <label for="productSizes">Tamanhos (separados por vírgula)</label>
         <input type="text" id="productSizes" placeholder="Ex: 38,39,40,41" required>
