--- a/sobre.html
+++ b/sobre.html
@@ -10,23 +10,34 @@
   <canvas id="bgCanvas"></canvas>
 
   <!-- Header igual ao index.html -->
-  <header class="site-header">
+   <header class="site-header">
     <div class="header-container">
       <div class="logo">
-        <h1>Ande firme com qualidade</h1>
+        <a href="index.html">
+          <img src="T.png" alt="Logo Ande Firme" class="logo-img">
+        </a>
+        <div class="logo-text">
+          <h1>Ande firme com qualidade</h1>
+          <p class="tagline">Tênis</p>
+        </div>
       </div>
+
       <nav class="main-nav">
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="produtos.html">Produtos</a></li>
-          <li><a href="sobre.html" class="active">Sobre</a></li>
+          <li><a href="sobre.html">Sobre nós</a></li>
+          <li><a href="login.html">Cadastro</a></li>
+          <li><a href="compra.html" class="active">🛒</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
+
   <main>
-    <section>
+    <section class="hero-about">
+    <div class="hero-content">
       <h2>Quem somos</h2>
       <p>A Passo Certos é uma empresa fictícia criada com o objetivo de representar um modelo inovador
 no setor de calçados, unindo conforto, estilo e responsabilidade social. Inspirada pela ideia de
