--- a/login.html
+++ b/login.html
@@ -11,6 +11,10 @@
 <header class="site-header">
   <div class="header-container">
     <div class="logo">
+        <a href="index.html">
+          <img src="T.png" alt="Logo Ande Firme" class="logo-img">
+        </a>
+    <div class="logo-text">
       <h1>Ande firme com qualidade</h1>
     </div>
   </div>
