--- a/dashboard.html
+++ b/dashboard.html
@@ -21,33 +21,47 @@
 </header>
 
 <main>
-  <section id="dashboard-section">
-    <h2>Bem-vindo, <span id="userName"></span>!</h2>
-    <p>Você está logado na sua conta.</p>
+  <section id="dashboard-section" class="container">
+
+    <h2 class="section-title">Bem-vindo, <span id="userName"></span>!</h2>
+    <p style="text-align:center; margin-bottom:40px;">Você está logado na sua conta.</p>
 
     <!-- Configurações do usuário -->
-    <section id="user-settings">
-      <h3>Configurações da Conta</h3>
+    <section class="auth-section">
+      <h2>Configurações da Conta</h2>
       <form id="user-settings-form">
+
+        <!-- Foto de perfil -->
+        <div class="form-group">
+          <label for="profilePhoto">Foto de Perfil</label>
+          <input type="file" id="profilePhoto" accept="image/*">
+          <img id="profilePreview" src="default-profile.png" alt="Prévia da Foto" class="profile-img">
+        </div>
+
+        <!-- Nome -->
         <div class="form-group">
           <label for="newName">Nome</label>
           <input type="text" id="newName" placeholder="Seu nome">
         </div>
+
+        <!-- Senha -->
         <div class="form-group">
           <label for="newPassword">Nova senha</label>
           <input type="password" id="newPassword" placeholder="Nova senha">
         </div>
+
         <button type="submit" class="btn-primary">Salvar Alterações</button>
       </form>
     </section>
 
     <!-- Histórico de compras -->
-    <section id="purchase-history">
-      <h3>Histórico de Compras</h3>
+    <section class="auth-section">
+      <h2>Histórico de Compras</h2>
       <div id="orders-list">
         <p>Ainda não há compras.</p>
       </div>
     </section>
+
   </section>
 </main>
 
@@ -55,8 +69,6 @@
   <p>&copy; 2025 Ande firme com qualidade</p>
 </footer>
 
-<!-- Script Dashboard modular -->
 <script type="module" src="./dashboard.js"></script>
-
 </body>
 </html>
