--- a/compra.html
+++ b/compra.html
@@ -97,7 +97,6 @@
   <footer class="site-footer">
     <p>&copy; 2025 Ande firme com qualidade</p>
   </footer>
-
-  <script src="script.js"></script>
+<script type="module" src="script.js"></script>
 </body>
 </html>
