--- a/compra.html
+++ b/compra.html
@@ -97,6 +97,8 @@
   <footer class="site-footer">
     <p>&copy; 2025 Ande firme com qualidade</p>
   </footer>
-<script type="module" src="script.js"></script>
+
+<script type="module" src="compra.js"></script>
+
 </body>
 </html>
