--- a/admin.html
+++ b/admin.html
@@ -68,6 +68,23 @@
     <h2>Produtos Cadastrados</h2>
     <div id="product-list"></div>
   </section>
+
+  <section id="user-list-section" class="dashboard-card">
+  <h2>Usuários Cadastrados</h2>
+  <table id="userTable">
+    <thead>
+      <tr>
+        <th>Nome</th>
+        <th>Email</th>
+        <th>Admin</th>
+        <th>Status</th>
+        <th>Ações</th>
+      </tr>
+    </thead>
+    <tbody id="userTableBody"></tbody>
+  </table>
+</section>
+
 </main>
 
 <footer class="site-footer">
